feat: add header

--- a/pages/main/index.html
+++ b/pages/main/index.html
@@ -6,11 +6,31 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
   <title>ChemTech Expert</title>
 </head>
 
 <body>
-
+  <div class="header">
+    <div class="header__wrapper">
+      <div class="header__top">
+        <div class="social-media">
+          <div class="social-media__body">
+            <a area-label='Whatsapp' href='#' class="social-media__link">
+              <span class="social-media__whatsapp"></span>
+            </a>
+            <a area-label='Telegramm' href="#" class="social-media__link">
+            </a>
+          </div>
+        </div>
+        <div class="order-call"></div>
+      </div>
+      <div class="header__middle"></div>
+      <div class="header__bottom"></div>
+    </div>
+  </div>
 </body>
 
 </html>
