--- a/pages/main/index.html
+++ b/pages/main/index.html
@@ -16,21 +16,43 @@
   <div class="header">
     <div class="header__wrapper">
       <div class="header__top">
+        <a class="logo logo__link" href="#">
+          <h1 class="logo__text">ChemTechExp</h1>
+        </a>
+        <nav class="menu">
+          <ul class="menu__list">
+            <li class="menu__item">
+              <a href="#" class="menu__link">Главная</a>
+            </li>
+            <li class="menu__item">
+              <a href="#" class="menu__link">О компании</a>
+            </li>
+            <li class="menu__item">
+              <a href="#" class="menu__link">Контакты</a>
+            </li>
+          </ul>
+        </nav>
         <div class="social-media">
           <div class="social-media__body">
             <a area-label='Whatsapp' href='#' class="social-media__link">
               <span class="social-media__whatsapp"></span>
             </a>
             <a area-label='Telegramm' href="#" class="social-media__link">
+              <span class="social-media__telegramm"></span>
             </a>
           </div>
         </div>
-        <div class="order-call"></div>
+        <div class="order-call">
+          <button class="order-call__btn">Заказать звонок</button>
+        </div>
       </div>
-      <div class="header__middle"></div>
-      <div class="header__bottom"></div>
+      <div class="header__bottom">
+        <div class="header__nav">
+        </div>
+      </div>
     </div>
   </div>
+  <script src="'../../scripts/index.js" type="module"></script>
 </body>
 
 </html>
