feat: add services menu

--- a/pages/main/index.html
+++ b/pages/main/index.html
@@ -47,7 +47,40 @@
         </div>
       </div>
       <div class="header__bottom">
-        <div class="header__nav">
+        <div class="service-menu">
+          <ul class="service-menu__list">
+            <li class="service-menu__item">
+              <a href="#" class="service-menu__link">Химическая экспертиза</a>
+            </li>
+            <li class="service-menu__item">
+              <a href="#" class="service-menu__link">Товароведческая экспертиза</a>
+            </li>
+            <li class="service-menu__item">
+              <a href="#" class="service-menu__link">Экологическая экспертиза</a>
+            </li>
+            <li class="service-menu__item">
+              <a href="#" class="service-menu__link">Экспертиза 44ФЗ, 223ФЗ</a>
+            </li>
+            <li class="service-menu__item">
+              <a href="#" class="service-menu__link">Рецензирование</a>
+            </li>
+            <li class="service-menu__item">
+              <a href="#" class="service-menu__link">Импортзамещение</a>
+            </li>
+            <li class="service-menu__item">
+              <a href="#" class="service-menu__link">Прием товара по договору</a>
+            </li>
+            <li class="service-menu__item">
+              <a href="#" class="service-menu__link">Судебная экспертиза</a>
+            </li>
+          </ul>
+        </div>
+        <div class="slogans">
+          <div class="slogans__list">
+            <p class="slogans__text">Решение вашей задачи под ключ и сопровождение</p>
+            <p class="slogans__text">Решение вашей задачи под ключ и сопровождение</p>
+            <p class="slogans__text">Решение вашей задачи под ключ и сопровождение</p>
+          </div>
         </div>
       </div>
     </div>
