--- a/pages/main/index.html
+++ b/pages/main/index.html
@@ -76,10 +76,13 @@
           </ul>
         </div>
         <div class="slogans">
-          <div class="slogans__list">
-            <p class="slogans__text">Решение вашей задачи под ключ и сопровождение</p>
-            <p class="slogans__text">Решение вашей задачи под ключ и сопровождение</p>
-            <p class="slogans__text">Решение вашей задачи под ключ и сопровождение</p>
+          <div class="slogans__body">
+            <video src="../../src/background/slogans/video-bg.mp4" class="slogans__video" autoplay muted loop></video>
+            <div class="slogans__list">
+              <p class="slogans__text">Решение вашей задачи под ключ и сопровождение</p>
+              <p class="slogans__text">Решение вашей задачи под ключ и сопровождение</p>
+              <p class="slogans__text">Решение вашей задачи под ключ и сопровождение</p>
+            </div>
           </div>
         </div>
       </div>
