feat: add loop func for slogans

--- a/pages/main/index.html
+++ b/pages/main/index.html
@@ -79,16 +79,13 @@
           <div class="slogans__body">
             <video src="../../src/background/slogans/video-bg.mp4" class="slogans__video" autoplay muted loop></video>
             <div class="slogans__list">
-              <p class="slogans__text">Решение вашей задачи под ключ и сопровождение</p>
-              <p class="slogans__text">Решение вашей задачи под ключ и сопровождение</p>
-              <p class="slogans__text">Решение вашей задачи под ключ и сопровождение</p>
             </div>
           </div>
         </div>
       </div>
     </div>
   </div>
-  <script src="'../../scripts/index.js" type="module"></script>
+  <script src="../../scripts/index.js" type="module"></script>
 </body>
 
 </html>
