feat: add about section

--- a/pages/main/index.html
+++ b/pages/main/index.html
@@ -85,6 +85,32 @@
       </div>
     </div>
   </div>
+  <section class="section-about section">
+    <div class="section__wrapper">
+      <div class="section-about__wrapper">
+        <div class="section-about__title title">
+          <h2 class="section-about__title-text">О нас</h2>
+        </div>
+        <div class="section-about__body">
+          <img src="../../src/img/about/about-img.jpg" alt="Labotatory Image" class="section-about__img">
+          <div class="section-about__info">
+            <p class="section-about__info-text">Наша компания имеет отличную репутацию на рынке экспертиз, т.к. мы очень
+              дорожим ей, поэтому к каждой работе имеется основательный и ответственный подход. Для нас имеет большое
+              значение каждое заключение, выданное высококвалифицированными экспертами, которое может быть использовано
+              в
+              различных государственных органах. Использование в работе современных инструментальных методов позволяет
+              получать объективный и достоверный результат, который отражается в каждом составленном заключении эксперта
+              или специалиста. <br>Наши работы всегда выполняются в срок, т.к. пунктуальность – одна из черт лучших
+              компаний
+              на рынке экспертиз. Мы всегда готовы предложить своим клиентам оптимальные сроки для выполнения работ,
+              которые могут быть и при условиях жестких дедлайнов. Деятельность компании осуществляется в соответствии с
+              законодательством РФ и уставом организации ООО «ХимТех Эксперт». Эксперты в какждой своей работе всегда
+              обеспечивают полноту, объективность и всесторонность исследования. </p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
   <script src="../../scripts/index.js" type="module"></script>
 </body>
 
