feat: add benefits block

--- a/pages/main/index.html
+++ b/pages/main/index.html
@@ -111,6 +111,67 @@
       </div>
     </div>
   </section>
+  <section class="section-benefits section">
+    <div class="section__wrapper">
+      <div class="section-benefits__cards">
+        <div class="section-benefits__card card">
+          <div class="section-benefits__card-icon">
+            <img src="../../src/icons/benefits/icon-cool.png" alt="Cool" class="card__icon-img">
+          </div>
+          <h3 class="card__title card__title_light">Преимущества</h3>
+          <div class="card__info card__info_light">
+            <ul class="card__info-list">
+              <li class="card__info-item">Гибкость в работе и взаимодействии</li>
+              <li class="card__info-item">Быстрые сроки исполнения работ <span class="card__info-item_strong">(от 1
+                  дня)</span>
+              </li>
+              <li class="card__info-item">Приемлемые цены <span class="card__info-item_strong">(от 4990 руб.)</span>
+              </li>
+              <li class="card__info-item">Скидка при повторном обращении 5%</li>
+              <li class="card__info-item">Скидка при обращении по рекомедации</li>
+              <li class="card__info-item">Прямой контакт с химической лабораторией и специалистами</li>
+              <li class="card__info-item">Оперативный выезд специалиста для отбора материала</li>
+            </ul>
+          </div>
+        </div>
+        <!--Преимущества-->
+        <div class="section-benefits__card card">
+          <div class="section-benefits__card-icon">
+            <img src="../../src/icons/benefits/icon-house.png" alt="House" class="card__icon-img">
+          </div>
+          <h3 class="card__title card__title_light">Принципы</h3>
+          <div class="card__info card__info_light">
+            <ul class="card__info-list">
+              <li class="card__info-item">Репутация</li>
+              <li class="card__info-item">Качество</li>
+              <li class="card__info-item">Компетентность</li>
+              <li class="card__info-item">Пунктуальность</li>
+              <li class="card__info-item">Объективность</li>
+              <li class="card__info-item">Всесторонность исследований</li>
+              <li class="card__info-item">Независимость</li>
+              <li class="card__info-item">Законность</li>
+            </ul>
+          </div>
+        </div>
+        <!--Принципы-->
+        <div class="section-benefits__card card">
+          <div class="section-benefits__card-icon">
+            <img src="../../src/icons/benefits/icon-man.png" alt="Man" class="card__icon-img">
+          </div>
+          <h3 class="card__title card__title_light">Отличительная черта</h3>
+          <div class="card__info card__info_light">
+            <ul class="card__info-list">
+              <li class="card__info-item">Предложение готового решения для вашей задачи</li>
+              <li class="card__info-item">Наши специалисты оперативно проинформируют вас
+                о возможности проведения исследования или экспертизы,
+                а также ее стоимости. </li>
+            </ul>
+          </div>
+        </div>
+        <!--Отличительная черта-->
+      </div>
+    </div>
+  </section>
   <script src="../../scripts/index.js" type="module"></script>
 </body>
 
