fix: fix styles in blocks

--- a/pages/main/index.html
+++ b/pages/main/index.html
@@ -79,6 +79,9 @@
           <div class="slogans__body">
             <video src="../../src/background/slogans/video-bg.mp4" class="slogans__video" autoplay muted loop></video>
             <div class="slogans__list">
+              <p class="slogans__text">Решение вашей задачи под ключ и сопровождение</p>
+              <p class="slogans__text">Анализ качества продукции и выдача заключения специалиста и эксперта</p>
+              <p class="slogans__text">Решение спорных вопросов по качеству, составу и показателям</p>
             </div>
           </div>
         </div>
@@ -87,26 +90,28 @@
   </div>
   <section class="section-about section">
     <div class="section__wrapper">
-      <div class="section-about__wrapper">
-        <div class="section-about__title title">
-          <h2 class="section-about__title-text">О нас</h2>
-        </div>
-        <div class="section-about__body">
+      <div class="section-about__title title">
+        <h2 class="section-about__title-text">О нас</h2>
+      </div>
+      <div class="section-about__body">
+        <div class="section-about__media ">
           <img src="../../src/img/about/about-img.jpg" alt="Labotatory Image" class="section-about__img">
-          <div class="section-about__info">
-            <p class="section-about__info-text">Наша компания имеет отличную репутацию на рынке экспертиз, т.к. мы очень
-              дорожим ей, поэтому к каждой работе имеется основательный и ответственный подход. Для нас имеет большое
-              значение каждое заключение, выданное высококвалифицированными экспертами, которое может быть использовано
-              в
-              различных государственных органах. Использование в работе современных инструментальных методов позволяет
-              получать объективный и достоверный результат, который отражается в каждом составленном заключении эксперта
-              или специалиста. <br>Наши работы всегда выполняются в срок, т.к. пунктуальность – одна из черт лучших
-              компаний
-              на рынке экспертиз. Мы всегда готовы предложить своим клиентам оптимальные сроки для выполнения работ,
-              которые могут быть и при условиях жестких дедлайнов. Деятельность компании осуществляется в соответствии с
-              законодательством РФ и уставом организации ООО «ХимТех Эксперт». Эксперты в какждой своей работе всегда
-              обеспечивают полноту, объективность и всесторонность исследования. </p>
-          </div>
+        </div>
+        <div class="section-about__info">
+          <p class="section-about__info-text">Наша компания имеет отличную репутацию на рынке экспертиз, т.к. мы очень
+            дорожим ей, поэтому к каждой работе имеется основательный и ответственный подход. Для нас имеет большое
+            значение каждое заключение, выданное высококвалифицированными экспертами, которое может быть использовано
+            в
+            различных государственных органах. Использование в работе современных инструментальных методов позволяет
+            получать объективный и достоверный результат, который отражается в каждом составленном заключении эксперта
+            или специалиста.</p>
+          <p class="section-about__info-text">Наши работы всегда выполняются в срок, т.к. пунктуальность – одна из черт
+            лучших
+            компаний
+            на рынке экспертиз. Мы всегда готовы предложить своим клиентам оптимальные сроки для выполнения работ,
+            которые могут быть и при условиях жестких дедлайнов. Деятельность компании осуществляется в соответствии с
+            законодательством РФ и уставом организации ООО «ХимТех Эксперт». Эксперты в каждой своей работе всегда
+            обеспечивают полноту, объективность и всесторонность исследования.</p>
         </div>
       </div>
     </div>
@@ -114,12 +119,12 @@
   <section class="section-benefits section">
     <div class="section__wrapper">
       <div class="section-benefits__cards">
-        <div class="section-benefits__card card">
-          <div class="section-benefits__card-icon">
+        <div class="card card_theme-blue">
+          <div class="card__icon">
             <img src="../../src/icons/benefits/icon-cool.png" alt="Cool" class="card__icon-img">
           </div>
-          <h3 class="card__title card__title_light">Преимущества</h3>
-          <div class="card__info card__info_light">
+          <h3 class="card__title">Преимущества</h3>
+          <div class="card__info">
             <ul class="card__info-list">
               <li class="card__info-item">Гибкость в работе и взаимодействии</li>
               <li class="card__info-item">Быстрые сроки исполнения работ <span class="card__info-item_strong">(от 1
@@ -135,12 +140,12 @@
           </div>
         </div>
         <!--Преимущества-->
-        <div class="section-benefits__card card">
-          <div class="section-benefits__card-icon">
+        <div class="card card_theme-light">
+          <div class="card__icon">
             <img src="../../src/icons/benefits/icon-house.png" alt="House" class="card__icon-img">
           </div>
-          <h3 class="card__title card__title_light">Принципы</h3>
-          <div class="card__info card__info_light">
+          <h3 class="card__title">Принципы</h3>
+          <div class="card__info">
             <ul class="card__info-list">
               <li class="card__info-item">Репутация</li>
               <li class="card__info-item">Качество</li>
@@ -154,12 +159,12 @@
           </div>
         </div>
         <!--Принципы-->
-        <div class="section-benefits__card card">
-          <div class="section-benefits__card-icon">
+        <div class="card card_theme-purple">
+          <div class="card__icon">
             <img src="../../src/icons/benefits/icon-man.png" alt="Man" class="card__icon-img">
           </div>
-          <h3 class="card__title card__title_light">Отличительная черта</h3>
-          <div class="card__info card__info_light">
+          <h3 class="card__title">Отличительная черта</h3>
+          <div class="card__info">
             <ul class="card__info-list">
               <li class="card__info-item">Предложение готового решения для вашей задачи</li>
               <li class="card__info-item">Наши специалисты оперативно проинформируют вас
