feat: add clients block

--- a/pages/main/index.html
+++ b/pages/main/index.html
@@ -140,7 +140,7 @@
           </div>
         </div>
         <!--Преимущества-->
-        <div class="card card_theme-light">
+        <div class="card card_theme-green">
           <div class="card__icon">
             <img src="../../src/icons/benefits/icon-house.png" alt="House" class="card__icon-img">
           </div>
@@ -177,6 +177,37 @@
       </div>
     </div>
   </section>
+  <section class="section-clients section">
+    <div class="section__wrapper">
+      <div class="section-clients__title title">
+        <h2 class="section-clients__title-text">наши клиенты и парнеры</h2>
+      </div>
+      <div class="section-clients__list">
+        <a href="#" class="section-clients__client">
+          <img src="../../src/icons/clients/gazprom_logo.png" alt="Gazprom" class="section-clients__client-img">
+        </a>
+        <a href="#" class="section-clients__client">
+          <img src="../../src/icons/clients/gazprom_logo.png" alt="Gazprom" class="section-clients__client-img">
+        </a>
+        <a href="#" class="section-clients__client">
+          <img src="../../src/icons/clients/gazprom_logo.png" alt="Gazprom" class="section-clients__client-img">
+        </a>
+        <a href="#" class="section-clients__client">
+          <img src="../../src/icons/clients/gazprom_logo.png" alt="Gazprom" class="section-clients__client-img">
+        </a>
+        <a href="#" class="section-clients__client">
+          <img src="../../src/icons/clients/gazprom_logo.png" alt="Gazprom" class="section-clients__client-img">
+        </a>
+        <a href="#" class="section-clients__client">
+          <img src="../../src/icons/clients/gazprom_logo.png" alt="Gazprom" class="section-clients__client-img">
+        </a>
+        <a href="#" class="section-clients__client">
+          <img src="../../src/icons/clients/gazprom_logo.png" alt="Gazprom" class="section-clients__client-img">
+        </a>
+      </div>
+    </div>
+  </section>
+
   <script src="../../scripts/index.js" type="module"></script>
 </body>
 
