feat: add docs block

--- a/pages/main/index.html
+++ b/pages/main/index.html
@@ -207,7 +207,22 @@
       </div>
     </div>
   </section>
-
+  <section class="section-docs section">
+    <div class="section__wrapper">
+      <div class="section-docs__wrapper">
+        <div class="section-docs__title title">
+          <h2 class="section-docs__title-text">Наши свидетельства и сертификаты</h2>
+        </div>
+        <div class="section-docs__list">
+          <div class="section-docs__doc-item"></div>
+          <div class="section-docs__doc-item"></div>
+          <div class="section-docs__doc-item"></div>
+          <div class="section-docs__doc-item"></div>
+          <div class="section-docs__doc-item"></div>
+        </div>
+      </div>
+    </div>
+  </section>
   <script src="../../scripts/index.js" type="module"></script>
 </body>
 
