--- a/pages/main/index.html
+++ b/pages/main/index.html
@@ -223,6 +223,67 @@
       </div>
     </div>
   </section>
+  <section class="section-reviews section">
+    <div class="section__wrapper">
+      <div class="section-reviews__title title">
+        <h2 class="section-reviews__title-text">Отзывы</h2>
+      </div>
+      <div class="section-reviews__review-cards">
+        <div class="section-reviews__review-card">
+          <div class="section-reviews__user">
+            <div class="section-reviews__user-avatar">
+              <img src="../../src/img/user-ava/example.jpg" alt="Скарлет Йоханнсон" class="section-reviews__avatar-img">
+            </div>
+            <div class="section-reviews__user-info">
+              <p class="section-reviews__user-name">Скарлет Йоханнсон</p>
+              <p class="section-reviews__review-date">3 дня назад</p>
+            </div>
+          </div>
+          <div class="section-reviews__review">
+            <p class="section-reviews__review-text">Эта компания просто находка! Оперативно и качественно выполнили для
+              меня экспертизу по анализу качества воды. Благодаря их проффесионализму я съэкономила 25 000$. В следующий
+              раз обязательно обращусь сюда. И друзьям посоветую!</p>
+          </div>
+        </div>
+        <!--Отзыв-->
+        <div class="section-reviews__review-card">
+          <div class="section-reviews__user">
+            <div class="section-reviews__user-avatar">
+              <img src="../../src/img/user-ava/example.jpg" alt="Скарлет Йоханнсон" class="section-reviews__avatar-img">
+            </div>
+            <div class="section-reviews__user-info">
+              <p class="section-reviews__user-name">Скарлет Йоханнсон</p>
+              <p class="section-reviews__review-date">3 дня назад</p>
+            </div>
+          </div>
+          <div class="section-reviews__review">
+            <p class="section-reviews__review-text">Эта компания просто находка! Оперативно и качественно выполнили для
+              меня экспертизу по анализу качества воды. Благодаря их проффесионализму я съэкономила 25 000$. В следующий
+              раз обязательно обращусь сюда. И друзьям посоветую!</p>
+          </div>
+        </div>
+        <!--Отзыв-->
+        <div class="section-reviews__review-card">
+          <div class="section-reviews__user">
+            <div class="section-reviews__user-avatar">
+              <img src="../../src/img/user-ava/example.jpg" alt="Скарлет Йоханнсон" class="section-reviews__avatar-img">
+            </div>
+            <div class="section-reviews__user-info">
+              <p class="section-reviews__user-name">Скарлет Йоханнсон</p>
+              <p class="section-reviews__review-date">3 дня назад</p>
+            </div>
+          </div>
+          <div class="section-reviews__review">
+            <p class="section-reviews__review-text">Эта компания просто находка! Оперативно и качественно выполнили для
+              меня экспертизу по анализу качества воды. Благодаря их проффесионализму я съэкономила 25 000$. В следующий
+              раз обязательно обращусь сюда. И друзьям посоветую!</p>
+          </div>
+        </div>
+        <!--Отзыв-->
+      </div>
+      <input type="range" class="section-reviews__progress-bar" min="0" max="60" step="30">
+    </div>
+  </section>
   <script src="../../scripts/index.js" type="module"></script>
 </body>
 
