feat: add footer

--- a/pages/main/index.html
+++ b/pages/main/index.html
@@ -35,10 +35,10 @@
         <div class="social-media">
           <div class="social-media__body">
             <a area-label='Whatsapp' href='#' class="social-media__link">
-              <span class="social-media__whatsapp"></span>
+              <span class="social-media__icon social-media__whatsapp_blue"></span>
             </a>
             <a area-label='Telegramm' href="#" class="social-media__link">
-              <span class="social-media__telegramm"></span>
+              <span class="social-media__icon social-media__telegramm_blue"></span>
             </a>
           </div>
         </div>
@@ -445,6 +445,77 @@
       </div>
     </div>
   </section>
+  <footer class="footer">
+    <div class="footer__top">
+      <div class="footer__wrapper footer__top-content">
+        <a class="footer__logo footer__logo-link" href="#">
+          <p class="footer__logo-text">ChemTechExp</p>
+        </a>
+        <div class="footer__info">
+          <ul class="footer__info-list">
+            <li class="footer__info-item">
+              <a href="tel:+79257539797" class="footer__info-link">+7 (925) 753-97-97</a>
+            </li>
+            <li class="footer__info-item">
+              <a href="mailto:himteh.exp@yandex.ru" class="footer__info-link">himteh.exp@yandex.ru</a>
+            </li>
+            <li class="footer__info-item">Одинцово, ул. Белорусская, д. 4</li>
+          </ul>
+        </div>
+        <div class="footer__menu">
+          <ul class="footer__menu-list">
+            <li class="footer__menu-item">
+              <a href="#" class="footer__menu-link">Химическая экспертиза</a>
+            </li>
+            <li class="footer__menu-item">
+              <a href="#" class="footer__menu-link">Товароведческая экспертиза</a>
+            </li>
+            <li class="footer__menu-item">
+              <a href="#" class="footer__menu-link">Экологическая экспертиза</a>
+            </li>
+            <li class="footer__menu-item">
+              <a href="#" class="footer__menu-link">Экспертиза 44ФЗ, 223ФЗ</a>
+            </li>
+          </ul>
+        </div>
+        <div class="footer__menu">
+          <ul class="footer__menu-list">
+            <li class="footer__menu-item">
+              <a href="#" class="footer__menu-link">Резензирование</a>
+            </li>
+            <li class="footer__menu-item">
+              <a href="#" class="footer__menu-link">Импортзамещение</a>
+            </li>
+            <li class="footer__menu-item">
+              <a href="#" class="footer__menu-link">Прием товара по договору</a>
+            </li>
+            <li class="footer__menu-item">
+              <a href="#" class="footer__menu-link">Независимая судебная экспертиза</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+
+    </div>
+    <div class="footer__bottom">
+      <div class="footer__wrapper footer__bottom-content">
+        <div class="footer__copyright">
+          <p class="footer__copyright-text">&#169; 2023 CHEMTECHEXP.RU</p>
+        </div>
+        <div class="social-media">
+          <div class="social-media__body">
+            <a area-label='Whatsapp' href='#' class="social-media__link">
+              <span class="social-media__icon social-media__whatsapp_white"></span>
+            </a>
+            <a area-label='Telegramm' href="#" class="social-media__link">
+              <span class="social-media__icon social-media__telegramm_white"></span>
+            </a>
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </footer>
   <script src="../../scripts/index.js" type="module"></script>
 </body>
 
